--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CADASTRO</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
-    <h1 title="CADASTRO">CADASTRO</h1>
-    <a href="HOME PUBL  C.html">Ir à HOME PUBLIC</a>
+    <h1 title="Cadastro">Cadastro</h1>
+    <a href="home-public.html">Home Public</a><br>
+    <a href="login.html">Login</a><br>
+    <a href="home-user.html">Home User</a>
 </body>
 
 </html>
