--- a/pages/home-public.html
+++ b/pages/home-public.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 title="Home Public">Home Public</h1>
-    <a href="login.html">Ir ao Login</a>
+    <a href="login.html">Login</a>
 </body>
 
 </html>
