--- a/pages/login.html
+++ b/pages/login.html
@@ -10,7 +10,10 @@
 
 <body>
     <h1 title="Login">Login</h1>
-    <a href="home-public.html">Ir à Home Public</a>
+    <a href="home-public.html">Home Public</a><br>
+    <a href="cadastro.html">Cadastro</a><br>
+    <a href="recuperar-senha.html">Recuperar Senha</a><br>
+    <a href="home-user.html">Home User</a>
 </body>
 
 </html>
