--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -13,6 +13,8 @@
     <a href="home-public.html">Home Public</a><br>
     <a href="login.html">Login</a><br>
     <a href="home-user.html">Home User</a>
+
+    <p>Teste</p>
 </body>
 
 </html>
