--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -14,7 +14,7 @@
     <a href="login.html">Login</a><br>
     <a href="home-user.html">Home User</a>
 
-    <p>Teste</p>
+    <p>Testando Branch</p>
 </body>
 
 </html>
