criado pagina de login e os campos, juntamente com a estilização da pagina login em css

--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <p>
-        .
-    </p>
-    <h1 title="Recuperar Senha">Recuperar Senha</h1>
-    <a href="redefinir-senha.html">Redefinir Senha</a>
+    
+    <!-- <h1 title="Recuperar Senha">Recuperar Senha</h1> -->
+    <!-- <a href="redefinir-senha.html">Redefinir Senha</a> -->
 </body>
 
 </html>
