--- a/pages/login.html
+++ b/pages/login.html
@@ -5,16 +5,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/marquim.css">
     <title>Login</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card border-0 shadow rounded-3 my-5">
+              <div class="card-body p-4 p-sm-5">
+                <h1 class="card-title text-center mb-5 fw-light fs-5">LOGIN</h1>
+                <form>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
+                      in</button>
+                  </div>
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                    <label class="form-check-label" for="rememberPasswordCheck">
+                      Relembrar senha
+                    </label>
+                  </div>
+                  <hr class="my-4">
+                  <div class="d-grid mb-2">
+                    <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
+                      <i class="fab fa-google me-2"></i> Entrar com Google
+                    </button>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
+                      <i class="fab fa-facebook-f me-2"></i> Entrar com Facebook
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- <h1 title="Login">Login</h1> -->
+    <!-- <a href="home-public.html">Home Public</a><br> -->
+    <!-- <a href="cadastro.html">Cadastro</a><br> -->
+    <!-- <a href="recuperar-senha.html">Recuperar Senha</a><br> -->
+    <!-- <a href="home-user.html">Home User</a> -->
     
-    <h1 title="Login">Login</h1>
-    <a href="home-public.html">Home Public</a><br>
-    <a href="cadastro.html">Cadastro</a><br>
-    <a href="recuperar-senha.html">Recuperar Senha</a><br>
-    <a href="home-user.html">Home User</a>
 </body>
 
 </html>
