--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,10 +21,11 @@
             <div class="col-sm-9 col-md-7 col-lg-5 mx-auto w-50">
                 <div class="card border-0 shadow rounded-3 my-5">
                     <div class="card-body p-4 p-sm-5">
-                        <h5 class="card-title text-center mb-5 fw-light fs-5">Preencha todos os campos para efetuar o
+                        <h5 class="card-title text-center font-weight-bold mb-5 fw-light fs-5">Preencha todos os campos
+                            para efetuar o
                             cadastro</h5>
                         <form>
-                            <div class="row">
+                            <div class="row form-floating mb-3">
                                 <div class="form-floating mb-3 col">
                                     <input type="text" class="form-control" id="floatingNomeCompleto"
                                         placeholder="Nome Completo">
@@ -73,8 +74,10 @@
                                 </label>
                             </div>
                             <div class="d-grid">
-                                <button class="btn btn-primary btn-login text-uppercase fw-bold"
-                                    type="submit">Cadastrar</button>
+                                <!-- <button class="btn btn-primary btn-login text-uppercase fw-bold"
+                                    type="submit">Cadastrar</button> -->
+                                <a class="btn btn-primary btn-login text-uppercase fw-bold"
+                                    href="home-user.html">Cadastrar</a>
                             </div>
                             <hr class="my-4">
                             <div class="row">
@@ -92,6 +95,7 @@
                         </form>
                     </div>
                 </div>
+                <p class="text-center font-weight-bold">Já possui cadastro? <a href="login.html">Realizar login</a></p>
             </div>
         </div>
     </div>
