corrigindo alguns links do public e adicionando alguns link do privado

--- a/pages/meu-carrinho-public.html
+++ b/pages/meu-carrinho-public.html
@@ -14,7 +14,7 @@
     <a href="login.html">Login</a><br>
     <a href="meu-carrinho-public.html">Meu Carrinho Public</a><hr>
 
-    <a href="login.html">Avançar</a>
+    <a href="efetuar-compra.html">Avançar</a>
 
 </body>
 </html>
