--- a/pages/produto-doador-public+.html
+++ b/pages/produto-doador-public+.html
@@ -15,7 +15,7 @@
     <a href="meu-carrinho-public.html">Meu Carrinho Public</a><hr>
 
     <a href="perfil-anunciante-public.html">Visitar Perfil do Anunciante</a><br>
-    <a href="login.html">Mandar mensagem</a>
+    <a href="chat-doacao.html">Mandar mensagem</a>
 
 </body>
 </html>
