--- a/pages/perfil-anunciante-public.html
+++ b/pages/perfil-anunciante-public.html
@@ -14,7 +14,8 @@
     <a href="login.html">Login</a><br>
     <a href="meu-carrinho-public.html">Meu Carrinho Public</a><hr>
 
-    <a href="login.html">Mande uma mensagem</a><br><br>
+    <a href="chat-compras.html">Mande uma mensagem compra</a><br>
+    <a href="chat-doacao.html">Mande uma mensagem doação</a><br><br>
     <a href="produto-anuncio-public+.html">Produto Anuncio Public</a><br>
     <a href="produto-doador-public+.html">Produto Doador Public</a>
 
