--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
           <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card border-0 shadow rounded-3 my-5">
               <div class="card-body p-4 p-sm-5">
-                <h1 class="card-title text-center mb-5 fw-light fs-5">LOGIN</h1>
+                <h5 class="text-center mb-2 fwligth">Por favor, faça login para continuar</h5>
                 <form>
                   <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -25,11 +25,10 @@
                   </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
+                    <label for="floatingPassword">Senha</label>
                   </div>
                   <div class="d-grid">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign
-                      in</button>
+                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Entrar</button>
                   </div>
                   <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
