links adicionados  em todas as paginas public e privado

--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -18,7 +18,8 @@
 
     <a href="busca-filtragem-privada.html">Fazer uma busca com filtros/categorias</a><br><br>
     <a href="produto-anuncio-public+.html">Produto Anuncio Public</a><br>
-    <a href="produto-doador-public+.html">Produto Doador Public</a>
+    <a href="produto-doador-public+.html">Produto Doador Public</a><br>
+    <a href="anunciar.html">Fazer um anúncio</a>
     
 </body>
 
