--- a/pages/nova-forma-pagamento.html
+++ b/pages/nova-forma-pagamento.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rastreamento</title>
+    <title>Nova forma de pagamento</title>
 </head>
 
 <body>
-    <h1 title="Rastreamento">Rastreamento</h1><hr>
+    <h1 title="Nova forma de pagamento">Nova forma de pagamento</h1><hr>
     <a href="home-user.html">Home User</a><br>
     <a href="adquirir.html">Adquirir</a><br>
     <a href="doar.html">Doar</a><br>
     <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
     <a href="perfil-user.html">Perfil do Usuário</a><hr>
 
-    <p>Rastreamento</p>
+    <p>Campos da forma de pagamento</p>
+    <a href="efetuar-compra.html">Adicionar</a>
         
 </body>
 
