--- a/pages/perfil-user.html
+++ b/pages/perfil-user.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil User</title>
+    <title>Perfil do Usuário</title>
 </head>
+
 <body>
-    <h1 title="Perfil User">Perfil User</h1>
-    <a href="home-user.html">Home User</a>
+    <h1 title="Perfil do Usuário">Perfil do Usuário</h1><hr>
+    <a href="home-user.html">Home User</a><br>
+    <a href="adquirir.html">Adquirir</a><br>
+    <a href="doar.html">Doar</a><br>
+    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
+    <a href="perfil-user.html">Perfil do Usuário</a><hr>
+
+    <a href="anuncios.html">Meus Anúncios</a><br>
+    <a href="formas-pagamento.html">Formas de pagamento</a><br>
+    <a href="endereco.html">Endereço</a><br>
+    <a href="minha-conta.html">Minha conta</a><br>
+    <a href="home-public.html">Sair</a>
+    
 </body>
+
 </html>
