links adicionaods as paginas de admin

--- a/pages/criar-endereco.html
+++ b/pages/criar-endereco.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Pedido</title>
+    <title>Criar Endereço</title>
 </head>
 
 <body>
-    <h1 title="Criar Pedido">Criar Pedido</h1><hr>
+    <h1 title="Criar Endereço">Criar Endereço</h1><hr>
     <a href="home-user.html">Ver site</a><br>
     <a href="redefinir-senha.html">Alterar senha</a><br>
     <a href="home-public.html">Encerrar sessão</a><hr>
@@ -19,8 +19,8 @@
     <a href="lista-anuncios.html">Lista de anúncios</a><br>
     <a href="lista-pedidos.html">Lista de pedidos</a><hr>
 
-    <p>Campos do novo pedido</p>
-    <a href="lista-pedidos.html">Criar</a>
+    <p>Campos do novo endereço</p>
+    <a href="lista-enderecos.html">Criar</a>
 </body>
 
 </html>
