--- a/pages/redefinir-senha.html
+++ b/pages/redefinir-senha.html
@@ -17,35 +17,24 @@
           <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
             <div class="card border-0 shadow rounded-3 my-5">
               <div class="card-body p-4 p-sm-5">
-                <h5 class="text-center mb-2 fwligth">Por favor, faça login para continuar</h5>
+                <h5 class="text-center mb-2 fwligth">Redefinir senha </h5>
                 <form>
                   <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email</label>
+                    <label for="floatingInput">Senha</label>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Senha</label>
+                    <label for="floatingPassword">Confirma Senha</label>
                   </div>
                   <div class="d-grid">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Entrar</button>
+                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Confirmar</button>
                   </div>
                   <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
-                    <label class="form-check-label" for="rememberPasswordCheck">
-                      Relembrar senha
-                    </label>
-                  </div>
-                  <hr class="my-4">
-                  <div class="d-grid mb-2">
-                    <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-                      <i class="fab fa-google me-2"></i> Entrar com Google
-                    </button>
+                    
                   </div>
                   <div class="d-grid">
-                    <button class="btn btn-facebook btn-login text-uppercase fw-bold" type="submit">
-                      <i class="fab fa-facebook-f me-2"></i> Entrar com Facebook
-                    </button>
+                    
                   </div>
                 </form>
               </div>
