--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 title="Cadastro">Cadastro</h1>
-    <a href="home-public.html">Home Public</a><br>
+    <a href="index.html">Home Public</a><br>
     <a href="login.html">Login</a><br>
     <a href="home-user.html">Home User</a>
 
