--- a/pages/redefinir-senha.html
+++ b/pages/redefinir-senha.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/marquim.css">
+    <link rel="stylesheet" href="../styles/yago.css">
     <title>Login</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto w-50 ">
             <div class="card border-0 shadow rounded-3 my-5">
               <div class="card-body p-4 p-sm-5">
                 <h5 class="text-center mb-2 fwligth">Redefinir senha </h5>
@@ -28,7 +28,8 @@
                     <label for="floatingPassword">Confirma Senha</label>
                   </div>
                   <div class="d-grid">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Confirmar</button>
+                    <a class="btn btn-primary btn-login text-uppercase fw-bold"
+                                    href="/pages/login.html">Confirma</a>
                   </div>
                   <div class="form-check mb-3">
                     
