lincando os botoes e fazendo os fluxos de paginas

--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,8 @@
                     <label for="floatingPassword">Senha</label>
                   </div>
                   <div class="d-grid">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Entrar</button>
+                    <a class="btn btn-primary btn-login text-uppercase fw-bold"                                    
+                       href="home-user.html">Entrar</a>
                   </div>
                   <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
