--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -26,7 +26,8 @@
                     <label for="floatingInput">Email</label>
                   </div>      
                   <div class="d-grid">
-                    <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Enviar</button>
+                    <a class="btn btn-primary btn-login text-uppercase fw-bold"                                    
+                       href="home-user.html">Enviar</a>
                   </div>
                 </form>
               </div>
