--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -2,42 +2,72 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/marquim.css">
-    <title>Recuperar Senha</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/marquim.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Recuperar Senha</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card border-0 shadow rounded-3 my-5">
-              <div class="card-body p-4 p-sm-5">
-                <h4 class="text-center mb-2 fwligth">Esqueceu sua senha ?</h4>
-                <hr class="my-4">
-                <h6 class="card-title text-center mb-5 fw-light fs-5">Não se preocupe, nossa equite te ajudará a realizar login novamente</h6>    
-                <form>
-                  <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email</label>
-                  </div>      
-                  <div class="d-grid">
-                    <a class="btn btn-primary btn-login text-uppercase fw-bold"                                    
-                       href="home-user.html">Enviar</a>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
+  <!-- Header -->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
+
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
         </div>
       </div>
 
-    <!-- <h1 title="Recuperar Senha">Recuperar Senha</h1> -->
-    <!-- <a href="redefinir-senha.html">Redefinir Senha</a> -->
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="login.html">Login</a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card border-0 shadow rounded-3 my-5">
+          <div class="card-body p-4 p-sm-5">
+            <h4 class="text-center mb-2 fwligth">Esqueceu sua senha ?</h4>
+            <hr class="my-4">
+            <h6 class="card-title text-center mb-5 fw-light fs-5">Não se preocupe, nossa equite te ajudará a realizar
+              login novamente</h6>
+            <form>
+              <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email</label>
+              </div>
+              <div class="d-grid">
+                <a class="btn btn-primary btn-login text-uppercase fw-bold" href="home-user.html">Enviar</a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <h1 title="Recuperar Senha">Recuperar Senha</h1> -->
+  <!-- <a href="redefinir-senha.html">Redefinir Senha</a> -->
 </body>
 
 </html>
