--- a/pages/index.html
+++ b/pages/index.html
@@ -150,8 +150,8 @@
                     o calçado perfeito para você</p>
                   <h1 class="display-1 text-white mb-5 animated slideInRight">Passo certo para um
                     mundo melhor</h1>
-                  <a href="" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
-                  <a href="" class="btn btn-primary py-2 px-5 animated  .doar slideInRight">Doar</a>
+                  <a href="anunciar.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
+                  <a href="doar.html" class="btn btn-primary py-2 px-5 animated  .doar slideInRight">Doar</a>
                 </div>
               </div>
             </div>
