--- a/pages/login.html
+++ b/pages/login.html
@@ -81,7 +81,8 @@
             </form>
           </div>
         </div>
-        <p class="text-center fw-bold">Não possui cadastro? <a href="login.html">Cadastra-se</a></p>
+        <p class="text-center fw-bold">Não possui cadastro? <a href="cadastro.html">Cadastra-se</a></p>
+        <p class="text-center fw-bold">Esqueceu a senha? <a href="recuperar-senha.html">Recuperar senha</a></p>
       </div>
     </div>
   </div>
