--- a/pages/perfil-user.html
+++ b/pages/perfil-user.html
@@ -20,7 +20,7 @@
     <a href="formas-pagamento.html">Formas de pagamento</a><br>
     <a href="endereco.html">Endereço</a><br>
     <a href="minha-conta.html">Minha conta</a><br>
-    <a href="home-public.html">Sair</a>
+    <a href="index.html">Sair</a>
     
 </body>
 
