--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -47,9 +47,9 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card border-0 shadow rounded-3 my-5">
           <div class="card-body p-4 p-sm-5">
-            <h4 class="text-center mb-2 fwligth">Esqueceu sua senha ?</h4>
+            <h4 class="text-center mb-2 fwligth">Esqueceu sua senha?</h4>
             <hr class="my-4">
-            <h6 class="card-title text-center mb-5 fw-light fs-5">Não se preocupe, nossa equite te ajudará a realizar
+            <h6 class="card-title text-center mb-5 fw-light fs-5">Não se preocupe, nossa equipe te ajudará a realizar
               login novamente</h6>
             <form>
               <div class="form-floating mb-3">
@@ -57,7 +57,7 @@
                 <label for="floatingInput">Email</label>
               </div>
               <div class="d-grid">
-                <a class="btn btn-primary btn-login text-uppercase fw-bold" href="home-user.html">Enviar</a>
+                <a class="btn btn-primary btn-login text-uppercase fw-bold" href="redefinir-senha.html">Enviar</a>
               </div>
             </form>
           </div>
