--- a/pages/redefinir-senha.html
+++ b/pages/redefinir-senha.html
@@ -55,10 +55,10 @@
               </div>
               <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Confirma Senha</label>
+                <label for="floatingPassword">Confirmar Senha</label>
               </div>
               <div class="d-grid">
-                <a class="btn btn-primary btn-login text-uppercase fw-bold" href="/pages/login.html">Confirma</a>
+                <a class="btn btn-primary btn-login text-uppercase fw-bold" href="/pages/login.html">Confirmar</a>
               </div>
               <div class="form-check mb-3">
 
