arrumando mais links

--- a/pages/index.html
+++ b/pages/index.html
@@ -167,8 +167,8 @@
                     o calçado perfeito para você</p>
                   <h1 class="display-1 text-white mb-5 animated slideInRight">Caminhe com liberdade e
                     conforto</h1>
-                  <a href="" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
-                  <a href="" class="btn btn-primary doar py-2 px-5 animated slideInRight">Doar</a>
+                  <a href="anunciar.html" class="btn btn-primary py-2 px-5 animated slideInRight">Anunciar</a>
+                  <a href="doar.html" class="btn btn-primary doar py-2 px-5 animated slideInRight">Doar</a>
                 </div>
               </div>
             </div>
