--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/marquim.css">
@@ -81,7 +82,7 @@
             </form>
           </div>
         </div>
-        <p class="text-center fw-bold">Não possui cadastro? <a href="cadastro.html">Cadastra-se</a></p>
+        <p class="text-center fw-bold">Não possui cadastro? <a href="cadastro.html">Cadastre-se</a></p>
         <p class="text-center fw-bold">Esqueceu a senha? <a href="recuperar-senha.html">Recuperar senha</a></p>
       </div>
     </div>
