--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/arthur.css">
@@ -129,18 +130,25 @@
     </header>
 
     <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6 border border-primary">
-      <div class="d-flex flex-column h-100">
-        <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil" class="w-25">
-        <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
-      </div>
+        <div class="row">
+            <div class="col-6 border border-primary">
+                <div class="d-flex flex-column h-100">
+                    <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil" class="w-25">
+                    <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
+                </div>
+            </div>
+            <div class="container">
+                <div class="col-6 border border-primary">
+                    <div class="form-floating mb-3">
+                        <form>
+                            <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Nome Completo">
+                            <label for="floatingNomeCompleto">Nome Completo</label>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-6 border border-primary">
-      <form action=""></form>
-    </div>
-  </div>
-</div>
 
 
 </body>
