mvp de perfil, minha conta criados, home user criados. comecando nos meus anuncios

--- a/pages/perfil-user.html
+++ b/pages/perfil-user.html
@@ -103,7 +103,7 @@
     <header class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
-                <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
             </div>
 
             <div class="input-group mb-3 w-50">
@@ -117,7 +117,8 @@
                     <li class="menu-item"><a href="index.html">Inicio</a></li>
                     <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
                     <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="login.html">Login</a></li>
+                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                                alt="Foto de perfil" width="30px"></a></li>
                     <li class="carrinho">
                         <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
                             <i class="bi bi-cart4"></i>
@@ -131,14 +132,14 @@
 
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="btn-group-vertical w-50">
-          <a href="anuncios.html" class="btn btn-primary btn-lg p-2 m-2">Meus Anúncios</a><br>
-          <a href="formas-pagamento.html" class="btn btn-primary btn-lg p-2 m-2">Formas de pagamento</a><br>
-          <a href="endereco.html" class="btn btn-primary btn-lg p-2 m-2">Endereço</a><br>
-          <a href="minha-conta.html" class="btn btn-primary btn-lg p-2 m-2">Minha conta</a><br>
-          <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Sair</a>
+            <a href="anuncios.html" class="btn btn-primary btn-lg p-2 m-2">Meus Anúncios</a><br>
+            <a href="formas-pagamento.html" class="btn btn-primary btn-lg p-2 m-2">Formas de pagamento</a><br>
+            <a href="endereco.html" class="btn btn-primary btn-lg p-2 m-2">Endereço</a><br>
+            <a href="minha-conta.html" class="btn btn-primary btn-lg p-2 m-2">Minha conta</a><br>
+            <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Sair</a>
         </div>
-      </div>
-      
+    </div>
+
 </body>
 
 </html>
