--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -5,24 +5,147 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus anúncios</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/arthur.css">
+    <link rel="stylesheet" href="../styles/erick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <title>Meus Anúncios</title>
+
+    <style>
+        body {
+            background: #e2eaef;
+            font-family: "Open Sans", sans-serif;
+        }
+
+        .carousel .item {
+            color: #747d89;
+            min-height: 325px;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        .carousel .thumb-wrapper {
+            padding: 25px 15px;
+            background: #fff;
+            border-radius: 6px;
+            text-align: center;
+            position: relative;
+            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .carousel .item .img-box {
+            height: 120px;
+            margin-bottom: 20px;
+            width: 100%;
+            position: relative;
+        }
+
+        .carousel .item img {
+            max-width: 100%;
+            max-height: 100%;
+            display: inline-block;
+            position: absolute;
+            bottom: 0;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+        }
+
+
+        .carousel-control-prev i {
+            margin-left: -2px;
+        }
+
+        .carousel-control-next i {
+            margin-right: -4px;
+        }
+
+        .carousel-indicators {
+            bottom: -50px;
+        }
+
+        .carousel-indicators li,
+        .carousel-indicators li.active {
+            width: 10px;
+            height: 10px;
+            margin: 4px;
+            border-radius: 50%;
+            border: none;
+        }
+
+        .carousel-indicators li {
+            background: rgba(0, 0, 0, 0.2);
+        }
+
+        .carousel-indicators li.active {
+            background: rgba(0, 0, 0, 0.6);
+        }
+
+        .carousel .wish-icon {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            z-index: 99;
+            cursor: pointer;
+            font-size: 16px;
+            color: #abb0b8;
+        }
+
+        .carousel .wish-icon .fa-heart {
+            color: #ff6161;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 title="Meus anúncios">Meus anúncios</h1><hr>
-    <a href="home-user.html">Home User</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
-    <a href="perfil-user.html">Perfil do Usuário</a><hr>
+    <!-- Header -->
+    <header class="header">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo">
+                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+            </div>
 
-    <a href="anuncios.html">Meus anúncios</a><br>
-    <a href="chat-anuncios.html">Mensagens sobre este anúncio</a><br>
-    <a href="editar-anuncio.html">Editar anúncio</a><br><br>
-    <a href="compras.html">Compras</a><br>
-    <a href="doacoes-atualizadas.html">Doações</a><hr>
+            <div class="input-group mb-3 w-50">
+                <input type="text" class="form-control input-search" placeholder="Buscar...">
+                <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+                </div>
+            </div>
 
-    
+            <nav class="menu d-flex">
+                <ul class="menu-list d-flex justify-content-between align-items-center">
+                    <li class="menu-item"><a href="index.html">Inicio</a></li>
+                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+                    <li class="menu-item"><a href="doar.html">Doar</a></li>
+                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                                alt="Foto de perfil" width="30px"></a></li>
+                    <li class="carrinho">
+                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-cart4"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+
+    <div class="container">
+        <div>
+            <div class="card border border-primary" style="width: 15rem;">
+                <img src="../assets/529638.png" class="card-img-top" alt="Foto do produto anunciado">
+                <div class="card-body">
+                    <h5>Título do produto</h5>
+                    <p>Detalhes do produto</p>
+                    <a href="#" class="btn btn-primary">Ver anúncio</a>
+                </div>
+            </div>
+            <div>
+                
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
