--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -104,7 +104,7 @@
     <header class="header">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
-                <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+                <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
             </div>
 
             <div class="input-group mb-3 w-50">
@@ -118,7 +118,7 @@
                     <li class="menu-item"><a href="index.html">Inicio</a></li>
                     <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
                     <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="login.html">Login</a></li>
+                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png" alt="Foto de perfil" width="30px"></a></li>
                     <li class="carrinho">
                         <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
                             <i class="bi bi-cart4"></i>
@@ -129,26 +129,47 @@
         </div>
     </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-6 border border-primary">
-                <div class="d-flex flex-column h-100">
-                    <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil" class="w-25">
-                    <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
+
+
+    <div class="d-flex container justify-content-around">
+        <div class="border border-primary w-25">
+            <img src="../assets/foto-perfil-exemplo.png" alt="Icone de foto de perfil"
+                class="w-75 border border-primary">
+            <a href="index.html" class="btn btn-primary btn-lg p-2 m-2">Excluir conta</a>
+        </div>
+        <div class="border border-primary w-75 p-3">
+            <form>
+                <div class="form-group">
+                    <label for="floatingNomeCompleto" class="mt-1 mb-1 mr-1">Nome Completo</label>
+                    <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Nome Completo">
                 </div>
-            </div>
-            <div class="container">
-                <div class="col-6 border border-primary">
-                    <div class="form-floating mb-3">
-                        <form>
-                            <input type="text" class="form-control" id="floatingNomeCompleto" placeholder="Nome Completo">
-                            <label for="floatingNomeCompleto">Nome Completo</label>
-                        </form>
-                    </div>
+                <div class="form-group">
+                    <label for="floatingEmail" class="mt-1 mb-1 mr-1">Email</label>
+                    <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="floatingTelefone" class="mt-1 mb-1 mr-1">Telefone</label>
+                    <input type="text" class="form-control" id="floatingTelefone" placeholder="Telefone">
+                </div>
+                <div class="form-group">
+                    <label for="floatingGenero" class="mt-1 mb-1 mr-1">Gênero</label>
+                    <select class="form-control form-control2" id="floatingGenero">
+                        <option value="masculino">Masculino</option>
+                        <option value="feminino">Feminino</option>
+                        <option value="outro">Outro</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="floatingEndereco" class="mt-1 mb-1 mr-1">Endereço</label>
+                    <input type="text" class="form-control" id="floatingEndereco" placeholder="Endereço">
+                </div>
+                <div>
+                    <input class="btn btn-primary mt-2 float-end" type="submit" value="Submit">
+                </div>
+            </form>
         </div>
     </div>
+
 
 
 </body>
