pagina doar pronta, add novos assets

--- a/pages/anunciar.html
+++ b/pages/anunciar.html
@@ -53,41 +53,36 @@
     </header>
 
 
-    <div class="container d-flex justify-content-center">
-        <div class="w-25 border p-3">
-            <img src="../assets/529638.png" alt="Imagem sapato" class="img-fluid rounded mx-auto d-block">
-        </div>
-        <div class="w-75 border p-1">
-            <div class="form-floating m-1">
-                <textarea class="form-control" placeholder="Nome do Produto" id="floatingNome"></textarea>
-                <label for="floatingNome">Nome do Produto</label>
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <div class="w-25 border p-3">
+                <img src="../assets/529638.png" alt="Imagem sapato" class="img-fluid rounded mx-auto d-block">
             </div>
-            <div class="form-floating m-1">
-                <textarea class="form-control" placeholder="informações sobre o produto" id="floatingInfo"
-                    style="height: 110px;"></textarea>
-                <label for="floatingInfo">Informações sobre o produto</label>
+            <div class="w-75 border p-1">
+                <div class="form-floating m-1">
+                    <textarea class="form-control" placeholder="Nome do Produto" id="floatingNome"></textarea>
+                    <label for="floatingNome">Nome do Produto</label>
+                </div>
+                <div class="form-floating m-1">
+                    <textarea class="form-control" placeholder="informações sobre o produto" id="floatingInfo"
+                        style="height: 110px;"></textarea>
+                    <label for="floatingInfo">Informações sobre o produto</label>
+                </div>
+                <div class="form-floating m-1">
+                    <textarea class="form-control" placeholder="CEP" id="floatingCEP"></textarea>
+                    <label for="floatingCEP">CEP</label>
+                </div>
+                <div class="form-floating m-1">
+                    <textarea class="form-control" placeholder="Nome do Produto" id="floatingLoc"></textarea>
+                    <label for="floatingLoc">Localização</label>
+                </div>
+                <div class="input-group m-1">
+                    <span class="input-group-text">R$</span>
+                    <input type="text" class="form-control">
+                    <span class="input-group-text">,00</span>
+                </div>
+                <a href="produto-anuncio-public+.html" class="float-end btn btn-primary m-3">Anunciar</a>
             </div>
-            <div class="form-floating m-1">
-                <textarea class="form-control" placeholder="CEP" id="floatingCEP"></textarea>
-                <label for="floatingCEP">CEP</label>
-            </div>
-            <div class="form-floating m-1">
-                <textarea class="form-control" placeholder="Nome do Produto" id="floatingLoc"></textarea>
-                <label for="floatingLoc">Localização</label>
-            </div>
-            <div class="form-floating m-1">
-                <textarea class="form-control" placeholder="Nome do Produto" id="floatingNome"></textarea>
-                <label for="floatingNome">Nome do Produto</label>
-            </div>
-            <div class="input-group m-1">
-                <span class="input-group-text">R$</span>
-                <input type="text" class="form-control">
-                <span class="input-group-text">,00</span>
-              </div>
-            <a href="produto-anuncio-public+.html" class="float-end btn btn-primary m-3">Anunciar</a>
-        </div>
-        <div class="form">
-
         </div>
     </div>
 
