--- a/pages/doar.html
+++ b/pages/doar.html
@@ -54,7 +54,11 @@
 
 
     <div class="container">
+        <div class="text-center m-2">
+            <h2>Doar</h2>
+        </div>
         <div class="d-flex justify-content-center">
+
             <div class="w-25 border p-3">
                 <img src="../assets/529638.png" alt="Imagem sapato" class="img-fluid rounded mx-auto d-block">
             </div>
