finalizando produto anuncio

--- a/pages/doar.html
+++ b/pages/doar.html
@@ -103,7 +103,7 @@
                     <span id="rangeval">20</span>
                 </div>
                 <p>* Priorize a doação local para sua microrregião</p>
-                <a href="produto-anuncio-public+.html" class="float-end btn btn-primary m-3">Anunciar</a>
+                <a href="produto-doador-public+.html" class="float-end btn btn-primary m-3">Doar</a>
             </div>
         </div>
     </div>
