--- a/pages/adquirir.html
+++ b/pages/adquirir.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../styles/erick.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Adquirir</title>
-
     <style>
         body {
             background: #e2eaef;
@@ -64,15 +63,13 @@
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioH"
                             value="option1">
                         <label class="form-check-label" for="inlineRadioH"><img src="../assets/homem-boneco.png"
-                                alt="Pe esquerdo" class="rounded mx-auto d-block" height="250px"
-                                width="auto"></label>
+                                alt="Pe esquerdo" class="rounded mx-auto d-block" height="250px" width="auto"></label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioM"
                             value="option2">
                         <label class="form-check-label" for="inlineRadioM"><img src="../assets/mulher-boneco.png"
-                                alt="Pe direito" class="rounded mx-auto d-block" height="250px"
-                                width="auto"></label>
+                                alt="Pe direito" class="rounded mx-auto d-block" height="250px" width="auto"></label>
                     </div>
                 </div>
                 <div class="p-2">
@@ -81,7 +78,7 @@
                         <option value="tenis">Tênis</option>
                         <option value="sapato-social">Sapato Social</option>
                         <option value="salto">Salto alto</option>
-                      </select>
+                    </select>
                 </div>
             </div>
             <div class="w-50 border p-2">
