oagina produto doador pronta

--- a/pages/produto-doador-public+.html
+++ b/pages/produto-doador-public+.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/arthur.css">
     <link rel="stylesheet" href="../styles/erick.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>Produto Anúncio</title>
+    <title>Produto Doador</title>
     <style>
         body {
             background: #e2eaef;
@@ -54,7 +54,7 @@
 
     <div class="container">
         <div class="d-flex align-items-center w-100 text-center p-3">
-            <h3>Nome Anunciante</h3>
+            <h3>Nome Doador</h3>
             <a href="busca-filtragem-public.html" class="btn btn-info m-3">Visitar perfil</a>
         </div>
         <div class="d-flex justify-content-center">
@@ -110,16 +110,15 @@
             </div>
             <div class="w-50 border border-dark d-flex justify-content-center p-2">
                 <div class="w-75 border p-1">
-                    <div class="d-flex ">
+                    <div class="d-flex">
                         <ul class="list-group list-group-flush p-2">
                             <li class="list-group-item text-center h2">Ficha técnica</li>
-                            <li class="list-group-item h5">Tamanho: 39</li>
+                            <li class="list-group-item h5">Tamanho: 35</li>
                             <li class="list-group-item h5">Categoria: Salto alto</li>
-                            <li class="list-group-item h5">Formas de cuidado: Evitar ambientes úmidos</li>
-                            <li class="list-group-item h5">Preço: R$ 79,90</li>
+                            <li class="list-group-item h5">Formas de cuidado: Evitar ambientes secos</li>
                         </ul>
                     </div>
-                    <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Continuar comprando</a>
+                    <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Mandar mensagem</a>
                 </div>
             </div>
         </div>
