finalizar compra pronta

--- a/pages/efetuar-compra.html
+++ b/pages/efetuar-compra.html
@@ -147,7 +147,7 @@
             </div>
             <div class="p-3">
                 <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-4"><img src="../assets/160200.png" alt="Foto do produto" width="60px"></div>
+                    <div class="col-4"><img src="../assets/salto-1.png" alt="Foto do produto" width="60px"></div>
                     <div class="col-4">
                         <p>Salto alto 39</p>
                     </div>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-4"><img src="../assets/cartao-credito.png" alt="Foto do produto" width="60px"></div>
+                    <div class="col-4"><img src="../assets/529638.png" alt="Foto do produto" width="60px"></div>
                     <div class="col-4">
                         <p>Sapato social 42</p>
                     </div>
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="row p-3">
-                <a href="busca-filtragem-privada.html" class="float-end btn btn-primary m-3">Adquirir</a>
+                <a href="finalizar-compra.html" class="float-end btn btn-primary m-3">Efetuar pagamento</a>
             </div>
         </div>
     </div>
