--- a/pages/compras.html
+++ b/pages/compras.html
@@ -104,7 +104,8 @@
                         <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">Mastercard **** **** **** 1234</p>
                     </div><br>
                     <div class="d-inline-flex flex-row">
-                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                        <a href="rastreamento.html" class="m-1 me-3" style="color: black;">Rastrear entrega</a>
+                        <a href="chat-compras.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
                             alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
                     </div>
                 </div>
@@ -122,7 +123,8 @@
                         <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">VISA **** **** **** 6789</p>
                     </div><br>
                     <div class="d-inline-flex flex-row">
-                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                        <a href="rastreamento.html" class="m-1 me-3" style="color: black;">Rastrear entrega</a>
+                        <a href="chat-compras.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
                             alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
                     </div>
                 </div>
@@ -140,7 +142,8 @@
                         <p class="m-1"><img src="../assets/cartao-credito.png" alt="Icone cartao de credito">VISA **** **** **** 6789</p>
                     </div><br>
                     <div class="d-inline-flex flex-row">
-                        <a href="chat-compras.html" class="mt-1 mb-1" style="color: black;"><img src="../assets/chat-icone.png"
+                        <a href="rastreamento.html" class="m-1 me-3" style="color: black;">Rastrear entrega</a>
+                        <a href="chat-compras.html" class="m-1" style="color: black;"><img src="../assets/chat-icone.png"
                             alt="Icone chat" width="20px" class="float-start me-1">Enviar mensagem ao anunciante</a>
                     </div>
                 </div>
