mudança de fluxo

--- a/pages/busca-filtragem-privada.html
+++ b/pages/busca-filtragem-privada.html
@@ -111,7 +111,7 @@
             <div class="thumb-content">
               <h4>Salto Alto Vermelho</h4>
               <p class="item-price"><strike>R$ 99,90</strike> <span>R$ 69,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+              <a href="meu-carrinho.html" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
             <div class="thumb-content">
               <h4>Salto Alto Preto</h4>
               <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+              <a href="meu-carrinho.html" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
             <div class="thumb-content">
               <h4>Salto Alto Rosa</h4>
               <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+              <a href="meu-carrinho.html" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
             <div class="thumb-content">
               <h4>Salto Alto Preto</h4>
               <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+              <a href="meu-carrinho.html" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
           </div>
         </div>
@@ -166,7 +166,7 @@
             <div class="thumb-content">
               <h4>Salto Alto Vermelho</h4>
               <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
-              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+              <a href="meu-carrinho.html" class="btn btn-primary">Adicionar ao carrinho</a>
             </div>
           </div>
         </div>
