alterando fluxo de paginas que estavam erradas

--- a/pages/meu-carrinho.html
+++ b/pages/meu-carrinho.html
@@ -150,7 +150,7 @@
             <span>R$ 418</span>
           </footer>
         </div>
-        <button>Finalizar Compra</button>
+        <a href="efetuar-compra.html" class="float-end btn btn-primary m-3">Finalizar compra</a>
       </aside>
     </div>
 </main>
