--- a/pages/produto-doador-public+.html
+++ b/pages/produto-doador-public+.html
@@ -118,7 +118,7 @@
                             <li class="list-group-item h5">Formas de cuidado: Evitar ambientes secos</li>
                         </ul>
                     </div>
-                    <a href="busca-filtragem-public.html" class="float-end btn btn-primary m-3">Mandar mensagem</a>
+                    <a href="chat-doacao.html" class="float-end btn btn-primary m-3">Mandar mensagem</a>
                 </div>
             </div>
         </div>
