adicona icones de chat

--- a/pages/editar-endereco.html
+++ b/pages/editar-endereco.html
@@ -45,6 +45,11 @@
             </nav>
         </div>
     </header>
+    <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="#" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
     <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link" href="anuncios.html">Meus Anúncios</a> <a
             class="nav-link active " href="compras.html">Compras</a> <a class="nav-link "
             href="doacoes-atualizadas.html">Doações</a> </nav>
