--- a/pages/adquirir.html
+++ b/pages/adquirir.html
@@ -51,6 +51,11 @@
         </div>
     </header>
 
+    <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="#" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
 
     <div class="container">
         <div class="text-center m-2">
