--- a/pages/anuncios.html
+++ b/pages/anuncios.html
@@ -83,6 +83,11 @@
         </div>
     </header>
 
+    <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="#" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
 
     <div class="container">
         <nav class="nav nav-tabs nav-justified mt-3 mb-3">
