--- a/pages/busca-filtragem-privada.html
+++ b/pages/busca-filtragem-privada.html
@@ -57,6 +57,12 @@
     </div>
   </header>
 
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="#" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+  </div>
+
   <div class="container">
     <div>
       <div class="row d-flex align-items-center w-100">
