--- a/pages/finalizar-compra.html
+++ b/pages/finalizar-compra.html
@@ -53,6 +53,12 @@
     </div>
   </header>
 
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="#" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+</div>
+  
   <div class="container d-flex justify-content-center">
     <div class="w-50 pt-3 pb-4">
       <div>
