--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -140,6 +140,12 @@
     </div>
   </header>
 
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="#" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
+  </div>
+
   <div class="hero container-fluid px-0 mb-5">
     <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
