--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -130,6 +130,11 @@
     </header>
 
 
+    <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="#" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
 
     <div class="d-flex container justify-content-around">
         <div class="w-25">
