--- a/pages/perfil-user.html
+++ b/pages/perfil-user.html
@@ -129,6 +129,11 @@
         </div>
     </header>
 
+    <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+        <a href="#" class="botao_chat">
+          <i class="bi bi-chat-text h1"></i>
+        </a>
+      </div>
 
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="btn-group-vertical w-50">
