--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -131,7 +131,7 @@
         <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
               alt="Foto de perfil" width="30px"></a></li>
         <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+          <a href="meu-carrinho.html" rel="noopener noreferrer">
             <i class="bi bi-cart4"></i>
           </a>
         </li>
