--- a/pages/nova-forma-pagamento.html
+++ b/pages/nova-forma-pagamento.html
@@ -43,7 +43,7 @@
             </div>
         </header>
         <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
-            <a href="#" class="botao_chat">
+            <a href="meu-carrinho.html" class="botao_chat">
               <i class="bi bi-chat-text h1"></i>
             </a>
           </div>
